# cobani

./: .gitignore
core/: configure.ac  core-linux.cbp  core-mingw.cbp  core.cbp  core.depend
core/src/: Dust.cc  Dust.hh  Entities.cc  Entities.hh  Makefile.am  Worlds.hh  cobani-core.pc.in  contexts.cc  contexts.hh  entities.cc  entities.hh
core/tests/: Console.cc  Console.hh  OgreTest.cc  OgreTest.hh  Window.cc  Window.hh  main-windows.cc  main.cpp  test2D.cc
gui/: configure.ac  gui-linux.cbp  gui-mingw.cbp  gui.cbp  gui.depend
gui/src/: Community.cc  Community.hh  FirstPerons.cc  FirstPerons.hh  Makefile.am  main-community.cc  main-firstperson.cc  main.cpp
ing/: Definicion.odt
